--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: CJM Films Contact Page
+title: StillWaves Contact Page
 ---
 
 {% include nav.html %}
@@ -20,64 +20,36 @@ title: CJM Films Contact Page
                 </div>
                 -->
         </section>
-        <!-- contact form start -->
-        <section id="contact-form">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-9 col-sm-12">
-                <p class="py-2"><strong>Connect</strong></p>
-                <div class="block">
-                  <form action="https://formspree.io/mjvenrqb" method="POST">
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Your Name">
-                    </div>
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Email Address" name="_replyto">
-                    </div>
-                    <!--
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Subject">
-                    </div>
-                    -->
-                    <div class="form-group-2">
-                      <textarea class="form-control" rows="3" placeholder="Your Message" name="message"></textarea>
-                  </div>
-                  <button class="btn btn-default" type="submit">Send Message</button>
-                </div>
+
+
+        <div class="container">
+          <div class="row">
+
+            <div class="col-md-6 text-left mr-auto">
+              <div id="contact-box">
+              <div class="block">
+                <p>Band:</p>
+                <p>stillwavescontact@gmail.com</p>
+                <!--<h2>Contact</h2>
+                <p><a href="tel:{{site.data.site.tel}}">{{site.data.site.tel_display}}</a></p>
+                <ul class="address-block" style="list-style-type: none;">
+                  <li>
+                    <i class="fa fa-map-marker"></i>Based in Toronto, ON, Canada
+                  </li>
+                  <li>
+                    <i class="fa fa-envelope-o"></i>Email: cjmalanchen@gmail.com
+                  </li>
+                </ul>
+                 -->
+
               </div>
-                  </form>
-
-                    <div class="col-md-3 text-center">
-                      <div id="contact-box">
-                      <div class="block">
-                        <p>Christopher John Malanchen</p>
-                        <p>Editor, Film &amp; Television</p>
-                        <p>{{site.data.site.location.description}} {{site.data.site.location.city}}, {{site.data.site.location.country}}</p>
-                        <p>cjmalanchen@gmail.com</p>
-                        <!--<h2>Contact</h2>
-                        <p><a href="tel:{{site.data.site.tel}}">{{site.data.site.tel_display}}</a></p>
-                        <ul class="address-block" style="list-style-type: none;">
-                          <li>
-                            <i class="fa fa-map-marker"></i>Based in Toronto, ON, Canada
-                          </li>
-                          <li>
-                            <i class="fa fa-envelope-o"></i>Email: cjmalanchen@gmail.com
-                          </li>
-                        </ul>
-                         -->
-      
-                      </div>
-                    </div>
-      
-                  </div>
-
-
-
-                </div>
-
+            </div>
 
           </div>
-        </section>
+
+          </div>
+        </div>
+
         <!-- Call to action Start 
         <section id="call-to-action">
           <div class="container">
