--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: CJM Films - Chris Malanchen, Website
+title: StillWaves - Toronto-based Post-Punk Band
 ---
 
 
@@ -20,3 +20,135 @@ title: CJM Films - Chris Malanchen, Website
 {% include nav.html %}
 
 {% include frontpage-header.html %}
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>Still/title>
+   
+   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+   
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+   
+</head>
+<body>
+   
+   
+
+
+<main>
+
+   <!--
+   <section class="container">
+      <div class="row">
+         <div class="col-md-6">     
+            <div class="img-wrapper">
+  <img class="img-fluid" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/902426/Screen+Shot+2020-05-15+at+3.37.13+PM.png">
+</div>
+         </div>
+                  <div class="col-md-6">     
+            <div class="img-wrapper">
+  <img class="img-fluid" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/902426/00100sPORTRAIT_00100_BURST20200515160447507_COVER.jpg">
+</div>
+         </div>
+      </div>
+   </section>    
+   
+-->
+ 
+   
+   <section class="section container">
+
+      <div class="container-boxes">
+         <div class="box fill">MUSIC</div>
+         <div class="box fill">TOUR</div>
+         <div class="box fill">ABOUT</div>
+         <div class="box fill">VIDEO</div>
+         <div class="box fill">CONTACT</div>
+      </div>
+
+   </section>
+
+   
+   <section class="section">
+   
+   <div class="container">
+      <div class="row bottom image">
+         <div class="col-md-7 bg-album"></div>
+         <div class="col-md-5 bg-right d-flex align-items-center">
+            <div class="row justify-content-center">
+               <div class="col-sm-8">
+                  <div class="content text-left py-3">
+                     <h2 class="album-title">REGRESSING TIMES</h2>
+
+                     <h3>NEW ALBUM COMING JULY 29, 2020</h3>
+
+                     <ul class="album-listing py-4">
+                        <li>1) I See You in Ruins</li>
+                        <li>2) Lost the Plot</li>
+                        <li>3) There is No Hope</li>
+                        <li>4) Mirrors Tell All</li>
+                        <li>5) Regressing Times</li>
+                        <li>6) Modern Fascists
+                        </li>
+                        <li>7) No Minds</li>
+                        <li>8) Trust Yourself </li>
+                     </ul>
+
+                     <button type="button" class="btn btn-lg btn-block btn-outline-dark">Pre-Order the Album</button>
+
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+
+   </section>      
+     
+   
+
+   
+
+</main>
+   
+   
+</body>
+   
+   <script src="assets/js/app.js"></script>
+   
+ <script>
+
+const elements = Array.from(document.querySelectorAll('.fill'));
+
+function fill(item, index) {
+  
+  const bgColor = getComputedStyle(item).backgroundColor,
+  fillLayer = document.createElement('div');
+  fillLayer.classList.add('fill-layer');
+  item.style.backgroundColor = 'transparent';
+  item.style.position = 'relative';
+  item.style.overflow = 'hidden';
+  setTimeout(function() {
+    fillLayer.style.backgroundColor = bgColor;  
+    item.appendChild(fillLayer);
+  }, index * 1000);
+  
+}
+
+elements.forEach(fill);
+
+ </script>
+
+
+
+</html>
