updated video section, pushed to stillwaves.ca

--- a/videos.html
+++ b/videos.html
@@ -13,10 +13,19 @@ title: StillWaves - Videos
        <h1 class="aqua">Still</h1>
        <h1 class="white">Waves</h1>
 
+       <div class="row">
+          <div class="col-md-8 mr-auto">
+             <p class="display-4">Video Coming Soon</p>
+          </div>
+       </div>
+       <!--
        <div id="video">
           <iframe width="853" height="480" src="https://www.youtube.com/embed/0lBQdzSQSaI" frameborder="0" allowfullscreen class="big"></iframe>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/0lBQdzSQSaI" frameborder="0" allowfullscreen class="small"></iframe>
        </div>
+
+       -->
+
 
     </div>
  </section>
