updated video section, pushed to stillwaves.ca

--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,8 @@ title: StillWaves Contact Page
         <div class="container">
           <div class="row">
 
-            <div class="col-md-6 text-left mr-auto">
-              <div id="contact-box">
-              <div class="block">
+            <div class="col-md-10 text-center mx-auto py-4 lead"> 
+
                 <p>Band:</p>
                 <p>stillwavescontact@gmail.com</p>
                 <!--<h2>Contact</h2>
@@ -41,10 +40,6 @@ title: StillWaves Contact Page
                   </li>
                 </ul>
                  -->
-
-              </div>
-            </div>
-
           </div>
 
           </div>
