--- a/videos.html
+++ b/videos.html
@@ -5,16 +5,13 @@ title: StillWaves - Videos
 
 {% include nav.html %}
 
-
-
-
    <section class="section">
     <div class="container text-center">
        <h1 class="aqua">Still</h1>
        <h1 class="white">Waves</h1>
 
        <div class="row">
-          <div class="col-md-8 mr-auto">
+          <div class="col-md-8 mx-auto text-center">
              <p class="display-4">Video Coming Soon</p>
           </div>
        </div>
