--- a/music.html
+++ b/music.html
@@ -31,7 +31,7 @@ title: StillWaves - Music
                          <li>8) Trust Yourself </li>
                       </ul>
    
-                      <button type="button" class="btn btn-lg btn-block btn-outline-dark disabled"><a href="https://stillwaves.bandcamp.com/" target="_blank" rel="noopener">Pre-Order *SOON</a></button>
+                      <button type="button" class="btn btn-lg btn-block btn-outline-dark "><a href="https://stillwaves.bandcamp.com/" target="_blank" rel="noopener">Pre-Order *SOON</a></button>
    
                    </div>
                 </div>
