--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@ title: StillWaves Contact Page
           <input type="email" name="_replyto" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
-        <div class="form-group"><textarea placeholder="Enter Message" name="message"></textarea>
+        <div class="form-group"><textarea class="form-control" placeholder="Enter Message" name="message"></textarea>
         </div>
             <div class="form-group">        <button type="button" class="btn btn-outline-info">SEND MESSAGE</button>
 
