--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@ title: StillWaves Contact Page
         </div>
         <div class="form-group"><textarea class="form-control" placeholder="Enter Message" name="message"></textarea>
         </div>
-            <div class="form-group">        <button type="button" class="btn btn-outline-info">SEND MESSAGE</button>
+            <div class="form-group"><button type="button" class="btn btn-outline-info" type="submit">SEND MESSAGE</button>
 
             </div>
       </form>
