--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,9 @@ title: StillWaves Contact Page
     <div class="col-md-8 mr-auto"> 
 
 
-      <form
-  action="https://formspree.io/mzbjdelp"
-  method="POST"
->
+      <form action="https://formspree.io/mzbjdelp" method="POST">
         <div class="form-group">
-          <input type="email" name="_replyto" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <input type="text" name="_replyto" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group"><textarea class="form-control" placeholder="Enter Message" name="message"></textarea>
