made some basic changes to the config file

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ title: StillWaves - About
     <div class="row no-gutters">
        <div class="col-md-6">     
           <div class="img-wrapper">
-<!-- The `::before` pseudo-element will apear here in the Broweser(DOM) and in web-inspector. -->
+<!-- The `::before` pseudo-element will apear here in the Browser(DOM) and in web-inspector. -->
            
              
 <figure>
