--- a/music.html
+++ b/music.html
@@ -21,7 +21,7 @@ title: StillWaves - Music
    
                       <ul class="album-listing py-4">
                          <li>1) I See You in Ruins</li>
-                         <li>2) Lost the Plot</li>
+                         <li>2) Lost in the Plot</li>
                          <li>3) There is No Hope</li>
                          <li>4) Mirrors Tell All</li>
                          <li>5) Regressing Times</li>
