--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: CJM Films - 404 Page
+title: StillWaves - 404 Page
 ---
 
 {% include nav.html %}
@@ -19,7 +19,7 @@ title: CJM Films - 404 Page
   }
 </style>
 
-<div class="container">
+<div class="container py-4 mx-4">
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
