--- a/videos.html
+++ b/videos.html
@@ -6,7 +6,7 @@ title: StillWaves - Videos
 {% include nav.html %}
 
    <section class="section">
-    <div class="container text-center">
+    <div class="container text-center video-container">
        <h1 class="aqua">Still</h1>
        <h1 class="white">Waves</h1>
 
