--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: StillWaves - About
 {% include nav.html %}
 
 
- <section class="container">
+ <section class="container section">
     <div class="row no-gutters">
        <div class="col-md-6">     
           <div class="img-wrapper">
