--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ title: StillWaves Contact Page
 <section class="section">
 
 
-<div class="container">
+<div class="container form-container">
   <div class="row">
 
     <div class="col-md-8 mr-auto"> 
