working on nav and responsive sizes

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: StillWaves Contact Page
 ---
 
 {% include nav.html %}
-
+{% include contact-header.html %}
     
 <section class="section">
 
@@ -12,7 +12,7 @@ title: StillWaves Contact Page
 <div class="container form-container">
   <div class="row">
 
-    <div class="col-md-8 mr-auto"> 
+    <div class="col-md-10 mx-auto"> 
 
 
       <form action="https://formspree.io/mzbjdelp" method="POST">
@@ -30,7 +30,7 @@ title: StillWaves Contact Page
 </div>
 
 
-            <div class="col-md-5 text-left mr-auto py-4 lead"> 
+            <div class="col-md-10 text-left mx-auto py-4 lead"> 
 
                 <p style="color: cyan;">Band:</p>
                 <p style="color: cyan;">stillwavescontact@gmail.com</p>
