added image to contact page

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@ title: StillWaves Contact Page
 ---
 
 {% include nav.html %}
-{% include contact-header.html %}
-    
+
+<img class="contact-header-image" src="img/stillwaves-detroit-cover-md.jpg" alt="contact page header image of Detroit ruins">
+
 <section class="section">
 
 
