--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ title: StillWaves - About
     
 <p>StillWaves began from a mutual love and admiration of post-punk heavyweights such as Killing Joke, The Sound and The Chameleons. Daniel Carlyle and Eric Pentz had met in various hazy nights, through mutual friends in Toronto and quickly began writing and crafting their sound.</p> 
 <p>After several months of writing and rehearsing, they took a chance, sending some poorly recorded demos to local producer/musician and recording guru Josh Korody, and he liked it enough to record their first album. Recorded and Produced by Korody and mastered by Jesse Keeler (Death from Above/Mstrkrft), The album tentatively titled, 'Regressing Times,' also features drums by Mike Wallace (Preoccupations). </p>
-<p>Carlyle's vocals and the themes of the songs focus on topics like the often sombre state of the world, past scorned love and the inherent ruthlessness and greed brought on by unchecked captialism. Dark music, for dark times indeed. Restless souls make restless music.</p>  
+<p>Carlyle's vocals and the themes of the songs focus on topics like the often sombre state of the world, past scorned love and the inherent ruthlessness and greed brought on by unchecked capitalism. Dark music, for dark times indeed. Restless souls make restless music.</p>  
 
 <p>Daniel Carlyle &ndash; Vocals, Bass, Keyboards, Sampler/Programming</p>
 <p>Eric Pentz &ndash; Guitar, Keyboards</p>
