--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ title: StillWaves - About
           <div class="img-wrapper">
 <!-- The `::before` pseudo-element will apear here in the Broweser(DOM) and in web-inspector. -->
 <figure>
-<img class="img-fluid" alt="Eric Pentz photo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/902426/ERIC+PIC+-+StillWaves+web.jpg" title="Eric Pentz">
+<img class="img-fluid" alt="Eric Pentz photo" src="img/StillWaves-02.jpg" title="Eric Pentz">
 </figure>                 
             
 </div>
