added new band photo and updated bio

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: StillWaves - About Toronto band StillWaves
 {% include nav.html %}
 
  <section class="container-fluid section">
-    <div class="row no-gutters">
+    <div class="row">
        <div class="col-md-10 mx-auto">     
           <div class="img-wrapper">           
              
