--- a/music.html
+++ b/music.html
@@ -17,7 +17,7 @@ title: StillWaves - Music
                    <div class="content text-left py-3">
                       <h2 class="album-title">REGRESSING TIMES</h2>
    
-                      <h3>ALBUM COMING JULY 29, 2020</h3>
+                      <h3>Album release September 29, 2020</h3>
    
                       <ul class="album-listing py-4">
                          <li>1) I See You in Ruins</li>
