added new band photo and updated bio

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ title: StillWaves Contact Page
 
 {% include nav.html %}
 
-<img class="contact-header-image" src="img/stillwaves-detroit-cover-md.jpg" alt="contact page header image of Detroit ruins">
+<img class="contact-header-image" title ="Photo by Daniel Carlyle" src="img/stillwaves-detroit-cover-md.jpg" alt="contact page header image of Detroit ruins">
 
 <section class="section">
 
@@ -30,29 +30,12 @@ title: StillWaves Contact Page
 
 </div>
 
-
             <div class="col-md-10 text-left mx-auto py-4 lead"> 
-
                 <p style="color: cyan;">Band:</p>
                 <p style="color: cyan;">stillwavescontact@gmail.com</p>
-                <!--<h2>Contact</h2>
-                <p><a href="tel:{{site.data.site.tel}}">{{site.data.site.tel_display}}</a></p>
-                <ul class="address-block" style="list-style-type: none;">
-                  <li>
-                    <i class="fa fa-map-marker"></i>Based in Toronto, ON, Canada
-                  </li>
-                  <li>
-                    <i class="fa fa-envelope-o"></i>Email: cjmalanchen@gmail.com
-                  </li>
-                </ul>
-                 -->
           </div>
 
           </div>
         </div>
-
-
-        
-
 </section>
 
