--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: StillWaves - About Toronto band StillWaves
 
 {% include nav.html %}
 
- <section class="container-fluid section">
+ <section class="container section">
     <div class="row">
        <div class="col-md-10 mx-auto">     
           <div class="img-wrapper">           
