added music release

--- a/videos.html
+++ b/videos.html
@@ -1,28 +1,30 @@
 ---
 layout: default
-title: StillWaves - Videos 
+title: StillWaves - Videos
 ---
 
 {% include nav.html %}
 
-   <section class="section">
-    <div class="container text-center video-container">
-       <h1 class="aqua">Still</h1>
-       <h1 class="white">Waves</h1>
+<section class="section pt-4">
+   <div class="container text-center video-container">
+      <!--<h1 class="aqua">Still</h1>
+      <h1 class="white">Waves</h1>
+      -->
 
-       <div class="row">
-          <div class="col-md-8 mx-auto text-center">
-             <p class="display-4">Video Coming Soon</p>
-          </div>
-       </div>
-       <!--
-       <div id="video">
-          <iframe width="853" height="480" src="https://www.youtube.com/embed/0lBQdzSQSaI" frameborder="0" allowfullscreen class="big"></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/0lBQdzSQSaI" frameborder="0" allowfullscreen class="small"></iframe>
-       </div>
+      <div class="row">
+         <div class="col-md-8 mx-auto text-center">
+            <p class="display-4">Regressing Times Video</p>
+         </div>
+      </div>
 
-       -->
+      <div class="video-responsive">
+         <iframe width="960" height="615" src="https://www.youtube.com/embed/bEXw6-vPyeQ" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+      </div>
 
 
-    </div>
- </section>
+
+   </div>
+</section>
