--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,18 @@
 layout: default
 title: StillWaves - News and Blog
 ---
-        {% include nav.html %} 
-        {% include blog-posts.html %} 
-       
+{% include nav.html %}
 
-    
-  
+<h1>Latest News</h1>
+
+<ul>
+        {% for post in site.posts %}
+
+        <li>
+                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                {{ post.excerpt }}
+                <a class="btn btn-primary" href="{{ post.url }}">Read More <span
+                                class="glyphicon glyphicon-chevron-right"></span></a>
+        </li>
+        {% endfor %}
+</ul>
