added margin top to music vid"

--- a/videos.html
+++ b/videos.html
@@ -13,7 +13,7 @@ title: StillWaves - Videos
 
       <div class="row">
          <div class="col-md-8 mx-auto text-center">
-            <p class="display-4">Regressing Times Video</p>
+            <p class="display-4 aqua video-top">Regressing Times Video</p>
          </div>
       </div>
 
