--- a/blog.html
+++ b/blog.html
@@ -4,16 +4,19 @@ title: StillWaves - News and Blog
 ---
 {% include nav.html %}
 
-<h1>Latest News</h1>
+<div class="section">
 
-<ul>
-        {% for post in site.posts %}
+        <h1>Latest News</h1>
+        <ul>
+                {% for post in site.posts %}
 
-        <li>
-                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                {{ post.excerpt }}
-                <a class="btn btn-primary" href="{{ post.url }}">Read More <span
-                                class="glyphicon glyphicon-chevron-right"></span></a>
-        </li>
-        {% endfor %}
-</ul>
+                <li>
+                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                        {{ post.excerpt }}
+                        <a class="btn btn-primary" href="{{ post.url }}">Read More <span
+                                        class="glyphicon glyphicon-chevron-right"></span></a>
+                </li>
+                {% endfor %}
+        </ul>
+
+</div>
