added margin top to music vid"

--- a/404.html
+++ b/404.html
@@ -1,27 +1,30 @@
 ---
-layout: default
+layout: epk
 title: StillWaves - 404 Page
 ---
 
 {% include nav.html %}
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+<section class="section-top">
 
-<div class="container py-4 mx-4">
+  <div class="container pt-4 text-center">
+    <div class="row">
+      <div class="col-md-9 mx-auto py-4 mx-4">
+        <h1>404</h1>
+        <p><strong>Page not found :(</strong></p>
+        <p>The requested page could not be found.</p>
+      </div>
+    </div>
+  </div>
+
+  <!--
+<div class="container error-page py-4 mx-4 pt-4 section text-center">
   <h1>404</h1>
-
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+
+-->
+
+
+</section>
