--- a/epk.html
+++ b/epk.html
@@ -51,8 +51,9 @@ title: StillWaves - Videos
                     <p><strong>Eric Pentz &ndash;</strong> Guitar, Keyboards</p>
 
 
-                    <p> Genre: post-punk, dark wave</p>
-                    <p>Comparable Artists: A Place to Bury Strangers, Killing Joke, The Sound, Disappears</p>
+                    <p><strong>Genre:</strong> post-punk, dark wave</p>
+                    <p><strong>Comparable Artists:</strong> A Place to Bury Strangers, Killing Joke, The Sound,
+                        Disappears</p>
 
                     <hr>
 
@@ -108,10 +109,18 @@ title: StillWaves - Videos
 
                     </p>
 
+                    <h2 class="display-4 aqua video-top py-2 px-2">Promo Photos</h2>
 
 
 
                 </div>
+
+
+                <div class="col-md-6 mx-auto mt-2"><img src="/img/StillWaves-Profile-Photo.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-6 mx-auto mt-2"> <img src="/img/stillwaves-skulls.jpg" class="img-fluid"></div>
+
+
             </div>
 
 
