added photos for EPK page

--- a/epk.html
+++ b/epk.html
@@ -50,7 +50,6 @@ title: StillWaves - Videos
 
                     <p><strong>Eric Pentz &ndash;</strong> Guitar, Keyboards</p>
 
-
                     <p><strong>Genre:</strong> post-punk, dark wave</p>
                     <p><strong>Comparable Artists:</strong> A Place to Bury Strangers, Killing Joke, The Sound,
                         Disappears</p>
@@ -116,8 +115,14 @@ title: StillWaves - Videos
                 </div>
 
 
+                <div class="col-md-6 mx-auto mt-2"><img src="/img/StillWaves-Promo-Picture.png" class="img-fluid">
+                </div>
                 <div class="col-md-6 mx-auto mt-2"><img src="/img/StillWaves-Profile-Photo.jpg" class="img-fluid">
                 </div>
+
+                <div class="col-md-6 mx-auto mt-2"> <img src="/img/StillWaves-Promo-Shot-2.png" class="img-fluid"></div>
+
+
                 <div class="col-md-6 mx-auto mt-2"> <img src="/img/stillwaves-skulls.jpg" class="img-fluid"></div>
 
 
