added download zip btn

--- a/epk.html
+++ b/epk.html
@@ -109,11 +109,14 @@ title: StillWaves - Videos
                     </p>
 
                     <h2 class="display-4 aqua video-top py-2 px-2">Promo Photos</h2>
-
-
-
                 </div>
 
+                <div class="col-md-8 mx-auto mt-2">
+                    <p><button class="btn btn-outline-secondary btn-lg"><a href="/img/images.zip">Download the
+                                Photos
+                                (.zip)</a></button>
+                    </p>
+                </div>
 
                 <div class="col-md-6 mx-auto mt-2"><img src="/img/StillWaves-Promo-Picture.png" class="img-fluid">
                 </div>
@@ -124,6 +127,7 @@ title: StillWaves - Videos
 
 
                 <div class="col-md-6 mx-auto mt-2"> <img src="/img/stillwaves-skulls.jpg" class="img-fluid"></div>
+
 
 
             </div>
