--- a/blog.html
+++ b/blog.html
@@ -1,22 +1,19 @@
 ---
-layout: default
+layout: post
 title: StillWaves - News and Blog
 ---
-{% include nav.html %}
 
-<div class="section">
 
-        <h1>Latest News</h1>
-        <ul>
-                {% for post in site.posts %}
 
-                <li>
-                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                        {{ post.excerpt }}
-                        <a class="btn btn-primary" href="{{ post.url }}">Read More <span
-                                        class="glyphicon glyphicon-chevron-right"></span></a>
-                </li>
-                {% endfor %}
-        </ul>
+<h1 class="text-white">Latest News</h1>
+<ul>
+        {% for post in site.posts %}
 
-</div>
+        <li>
+                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                {{ post.excerpt }}
+                <a class="btn btn-primary" href="{{ post.url }}">Read More <span
+                                class="glyphicon glyphicon-chevron-right"></span></a>
+        </li>
+        {% endfor %}
+</ul>
