added margin top to music vid"

--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,7 @@ layout: post
 title: StillWaves - News and Blog
 ---
 
-
-
-<h1 class="text-white">Latest News</h1>
+<h1 class="">Latest News</h1>
 <ul>
         {% for post in site.posts %}
 
