--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,15 @@ title: StillWaves - News | Blog
         <li>
                 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
                 {{ post.excerpt }}
+
+                <!-- Preview Image -->
+                {% if page.image %}
+                <img class="img-responsive" src="{{ page.image }}" alt="{{ page.image }}">
+                {% endif %}
+
+
+                <hr>
+
                 <a class="btn btn-primary" href="{{ post.url }}">Read More <span
                                 class="glyphicon glyphicon-chevron-right"></span></a>
         </li>
