added title to EPK page

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: epk
-title: StillWaves - 404 Page
+title: StillWaves - 404 Page - something is funky, error!
 ---
 
 {% include nav.html %}
