edited about page

--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@ title: StillWaves - About Toronto band StillWaves
 
          <p>StillWaves formed from a mutual love and admiration of post-punk legends like Killing Joke, The Sound and
             The Chameleons. Daniel Carlyle and Eric Pentz had met, formerly, various hazy nights in Toronto, and
-            eventually assembled to begin crafting their sound.</p>
-         <p>After several months of writing and rehearsing, they took a chance, sending some poorly recorded, lo-fi
-            phone demos to local producer/musician/recording guru Josh Korody, and he liked it enough to record their
+            eventually assembled to begin crafting their sound and their goals.</p>
+         <p>After several fun and arduous months of writing and rehearsing, they took a chance, sending some poorly recorded, lo-fi
+            phone demos to local producer/musician/recording wizard Josh Korody, and he liked it enough to record their
             first album. Recorded and produced by Korody(Beliefs/Breeze/Wish) and mastered by Jesse Keeler (Death from
             Above/Mstrkrft), The self-titled album also features drums by Mike Wallace, of Canadian post-punk
             heavyweights Preoccupations.</p>
@@ -35,8 +35,8 @@ title: StillWaves - About Toronto band StillWaves
             Dark music, for dark times indeed. Restless souls generate restless music.</p>
 
          <p>Daniel Carlyle &ndash; Vocals, Bass, Keyboards, Sampler/Programming</p>
-         <p>Eric Pentz &ndash; Guitar, Keyboards</p>
-         <p>Drummer: Mike Wallace (recording/live), Andrew Heule (live)</p>
+         <p>Tyler Novak &ndash; Guitar, Keyboards</p>
+         <p>Drummer: Mike Wallace (recording/live), Andrew Heule (recording/live), Christopher Weins (live)</p>
 
       </div>
 
